force-app/main/default/objects/SBQQ__Subscription__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Use for report</description>
    <formula>SBQQ__Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>