force-app/main/default/objects/SBQQ__Subscription__c/fields/Account_Municipality__c.field-meta.xml
<CustomField>
    <fullName>Account_Municipality__c</fullName>
    <formula>SBQQ__Account__r.Municipality__r.Name</formula>
    <label>Account Municipality</label>
    <type>Text</type>
</CustomField>