force-app/main/default/objects/SBQQ__Subscription__c/fields/Active_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Product__c</fullName>
    <formula>SBQQ__Product__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active (Product)</label>
    <type>Checkbox</type>
</CustomField>