force-app/main/default/objects/SBQQ__Subscription__c/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renewal (Subscription)</label>
    <type>Checkbox</type>
</CustomField>