force-app/main/default/objects/SBQQ__Subscription__c/fields/Auto_Renewal_Cancelled_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Cancelled_Subscription__c</fullName>
    <inlineHelpText>Enter the date the customer has decided to cancel the Auto Renewal Clause</inlineHelpText>
    <label>Auto Renewal Cancelled (Subscription)</label>
    <type>Date</type>
</CustomField>