force-app/main/default/objects/SBQQ__Subscription__c/fields/Clio_Migrated_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Clio_Migrated_Subscription_Id__c</fullName>
    <description>This field is used for storing a unique subscription Id on the contracts that was migrated during GoLive May 2019. Workaround to solve DK Subscriptions shared between schools (framework agreements)</description>
    <externalId>true</externalId>
    <label>Migrated Subscription Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>