force-app/main/default/objects/SBQQ__Subscription__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Delivery: Deep clone for municipality deals or deals where multiple schools will have access to purchased subscriptions on a common order.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>