force-app/main/default/objects/SBQQ__Subscription__c/fields/Count_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Count_Start_Date__c</fullName>
    <description>Use for report</description>
    <formula>SBQQ__StartDate__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Count Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>