force-app/main/default/objects/SBQQ__Subscription__c/fields/Count_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Count_Subscription__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Subscription</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>