force-app/main/default/objects/SBQQ__Subscription__c/fields/CY_to_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>CY_to_Date_Closed__c</fullName>
    <description>Use for report to compare current &amp; previous year records 2021</description>
    <formula>IF( (Today() - DATE(
IF(Today() &lt; DATE( YEAR( TODAY() ) ,01,01),
YEAR( TODAY() ) -1,
YEAR( TODAY() )
),01,01)) &gt;= ( SBQQ__StartDate__c  - DATE( (IF( SBQQ__StartDate__c &lt; DATE( YEAR( SBQQ__StartDate__c) ,01,01),
YEAR( SBQQ__StartDate__c) -1,
YEAR( SBQQ__StartDate__c) )
),01,01)) ,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report to compare current &amp; previous year records 2021</inlineHelpText>
    <label>CY to Date - Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>