force-app/main/default/objects/SBQQ__Subscription__c/fields/Delivery_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Account__c</fullName>
    <label>Delivery Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>