force-app/main/default/objects/SBQQ__Subscription__c/fields/Delivery_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Account_ID__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Group__r.Delivery_Account__r.Account_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Account ID</label>
    <type>Text</type>
</CustomField>