force-app/main/default/objects/SBQQ__Subscription__c/fields/Delivery_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Account_Name__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Group__r.Delivery_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Account Name</label>
    <type>Text</type>
</CustomField>