force-app/main/default/objects/SBQQ__Subscription__c/fields/Earliest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Start_Date__c</fullName>
    <description>Shows earliest start date</description>
    <formula>IF(
    AND(
        ISBLANK( SBQQ__StartDate__c )
    ),
    NULL,
    DATE(1900, 01, 01) +
    MIN(
        BLANKVALUE(
            SBQQ__StartDate__c , 
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows earliest start date</inlineHelpText>
    <label>Earliest Start Date</label>
    <type>Date</type>
</CustomField>