force-app/main/default/objects/SBQQ__Subscription__c/fields/Expired_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expired_Formula__c</fullName>
    <formula>If (  SBQQ__EndDate__c  &lt; Today (), True, False)</formula>
    <label>Expired (Formula)</label>
    <type>Checkbox</type>
</CustomField>