force-app/main/default/objects/SBQQ__Subscription__c/fields/Expired_Last_6_months__c.field-meta.xml
<CustomField>
    <fullName>Expired_Last_6_months__c</fullName>
    <description>Check expired date in last 6 months (183 days)</description>
    <formula>IF(
AND(
SBQQ__EndDate__c &gt;= TODAY() - 183, 
SBQQ__EndDate__c &lt;= TODAY()), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check expired date in last 6 months (183 days)</inlineHelpText>
    <label>Expired – Last 6 months</label>
    <type>Checkbox</type>
</CustomField>