force-app/main/default/objects/SBQQ__Subscription__c/fields/IsTrial__c.field-meta.xml
<CustomField>
    <fullName>IsTrial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if it is only a trial subscription.</description>
    <label>Trial</label>
    <type>Checkbox</type>
</CustomField>