force-app/main/default/objects/SBQQ__Subscription__c/fields/Last_Modified_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Stamp__c</fullName>
    <label>Last Modified Date (Stamp)</label>
    <type>Date</type>
</CustomField>