force-app/main/default/objects/SBQQ__Subscription__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF(INCLUDES(  SBQQ__Product__r.Level__c  , &quot;Högstadiet&quot;), &quot;Högstadiet&quot; + BR(), NULL)   + 
IF(INCLUDES( SBQQ__Product__r.Level__c , &quot;Mellanstadiet&quot;), &quot;Mellanstadiet&quot; + BR() , NULL)  +
IF(INCLUDES( SBQQ__Product__r.Level__c , &quot;Förberedelseklass&quot;), &quot;Förberedelseklass&quot; + BR() , NULL)  + 
IF(INCLUDES( SBQQ__Product__r.Level__c , &quot;Børnehaveklasse/0. Klasse&quot;), &quot;Børnehaveklasse/0. Klasse&quot; + BR() , NULL)  +
IF(INCLUDES( SBQQ__Product__r.Level__c , &quot;Indskolning&quot;), &quot;Indskolning&quot; + BR() , NULL)  +
IF(INCLUDES( SBQQ__Product__r.Level__c , &quot;Mellemtrin&quot;), &quot;Mellemtrin&quot; + BR() , NULL)  + 
IF(INCLUDES( SBQQ__Product__r.Level__c , &quot;Udskolning&quot;), &quot;Udskolning&quot; + BR() , NULL)  +
IF(INCLUDES( SBQQ__Product__r.Level__c , &quot;10. Klasse&quot;), &quot;10. Klasse&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>