force-app/main/default/objects/SBQQ__Subscription__c/fields/Municipality_Order__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If subscription is part of a central municipality deal, this value will be checked.</inlineHelpText>
    <label>Municipality Order</label>
    <type>Checkbox</type>
</CustomField>