force-app/main/default/objects/SBQQ__Subscription__c/fields/Partner_ACV_for_Commission__c.field-meta.xml
<CustomField>
    <fullName>Partner_ACV_for_Commission__c</fullName>
    <description>Populated on 1 January of the calendar year.
This is used to determine the value of Active subscriptions at the begining of the year.</description>
    <label>Partner ACV for Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>