force-app/main/default/objects/SBQQ__Subscription__c/fields/Partner_Price_per_Year_Sub__c.field-meta.xml
<CustomField>
    <fullName>Partner_Price_per_Year_Sub__c</fullName>
    <formula>IF(AND(SBQQ__ProrateMultiplier__c &gt; 0, ISPICKVAL( SBQQ__PricingMethod__c ,&apos;Block&apos;)) , (SBQQ__NetPrice__c / SBQQ__ProrateMultiplier__c) ,
IF (AND (SBQQ__ProrateMultiplier__c &gt; 0, ISPICKVAL( SBQQ__PricingMethod__c ,&apos;List&apos;)), ( SBQQ__Quantity__c * (SBQQ__NetPrice__c / SBQQ__ProrateMultiplier__c )), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Price per Year (Sub)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>