force-app/main/default/objects/SBQQ__Subscription__c/fields/Pause_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pause_End_Date__c</fullName>
    <inlineHelpText>Shows when the subscription pause (in case of municipality deals) takes effect.</inlineHelpText>
    <label>Pause End Date</label>
    <type>Date</type>
</CustomField>