force-app/main/default/objects/SBQQ__Subscription__c/fields/Primary_Contract_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contract_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contract Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Subscriptions (Primary Account)</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>