force-app/main/default/objects/SBQQ__Subscription__c/fields/Primary_Contract_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contract_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contract (Subscription)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Primary Contract (Subscription)</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>