force-app/main/default/objects/SBQQ__Subscription__c/fields/Primary_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pricing_Method__c</fullName>
    <formula>Text (Primary_Subscription__r.SBQQ__PricingMethod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Pricing Method</label>
    <type>Text</type>
</CustomField>