force-app/main/default/objects/SBQQ__Subscription__c/fields/Primary_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Delivery Subscriptions</relationshipLabel>
    <relationshipName>Delivery_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>