force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_ID_18_Characters__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_18_Characters__c</fullName>
    <formula>SBQQ__Product__r.Product_ID_18_Characters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID - 18 Characters</label>
    <type>Text</type>
</CustomField>