force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Name_ACV__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_ACV__c</fullName>
    <formula>SBQQ__Product__r.Name  &amp; &quot;,&quot; &amp; &quot; &quot; &amp;  TEXT(Subscription_ACV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name &amp; ACV</label>
    <type>Text</type>
</CustomField>