force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Overview__c.field-meta.xml
<CustomField>
    <fullName>Product_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to create the related list on the Product Overview Custom Object</description>
    <label>Product Overview</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProductOverview__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>ProductOverview__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Product__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductOverview__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>