force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Pricing_Type__c</fullName>
    <formula>TEXT ( SBQQ__Product__r.SBQQ__PricingMethod__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Pricing Type</label>
    <type>Text</type>
</CustomField>