force-app/main/default/objects/SBQQ__Subscription__c/fields/Quote_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Type__c</fullName>
    <description>Use for report</description>
    <formula>TEXT(SBQQ__QuoteLine__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Quote Line: Type</label>
    <type>Text</type>
</CustomField>