force-app/main/default/objects/SBQQ__Subscription__c/fields/Sales_Type_Code_Sub__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type_Code_Sub__c</fullName>
    <formula>TEXT ( SBQQ__QuoteLine__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Type Code (Sub)</label>
    <type>Text</type>
</CustomField>