force-app/main/default/objects/SBQQ__Subscription__c/fields/Start_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Today__c</fullName>
    <formula>If (SBQQ__StartDate__c &gt; Today (), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If True: Start date is greater than today.
If False: Start date is less or equal today.</inlineHelpText>
    <label>Start Date &gt; Today</label>
    <type>Checkbox</type>
</CustomField>