force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Account_ID_18_charachter__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Account_ID_18_charachter__c</fullName>
    <formula>SBQQ__Account__r.Owner.User_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Account ID 18-charachter</label>
    <type>Text</type>
</CustomField>