force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_ACV__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ACV__c</fullName>
    <formula>IF(AND(SBQQ__ProrateMultiplier__c &gt; 0, ISPICKVAL( SBQQ__PricingMethod__c ,&apos;Block&apos;)) ,   (SBQQ__CustomerPrice__c / SBQQ__ProrateMultiplier__c)  , 
IF (AND (SBQQ__ProrateMultiplier__c &gt; 0, ISPICKVAL( SBQQ__PricingMethod__c ,&apos;List&apos;)), ( SBQQ__Quantity__c * (SBQQ__CustomerPrice__c /   SBQQ__ProrateMultiplier__c )), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Yearly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>