force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Contract_ID_18_charachter__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contract_ID_18_charachter__c</fullName>
    <formula>SBQQ__Contract__r.Contract_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Contract ID 18-charachter</label>
    <type>Text</type>
</CustomField>