force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Domain_Layer_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Domain_Layer_ID__c</fullName>
    <description>Sync from zero</description>
    <inlineHelpText>Sync from zero</inlineHelpText>
    <label>Subscription Domain Layer ID</label>
    <type>TextArea</type>
</CustomField>