force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID_18_character__c</fullName>
    <description>Use for reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for reports</inlineHelpText>
    <label>Subscription ID 18-character</label>
    <type>Text</type>
</CustomField>