force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Owner_ID_18_charachter__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Owner_ID_18_charachter__c</fullName>
    <formula>Owner:User.User_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Owner ID  18-charachter</label>
    <type>Text</type>
</CustomField>