force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <formula>TEXT(SBQQ__Contract__r.Contract_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Type (HC)</label>
    <type>Text</type>
</CustomField>