force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Zero_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Zero_Id__c</fullName>
    <description>Unique Id from Zero</description>
    <externalId>true</externalId>
    <label>Subscription Zero Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>