force-app/main/default/objects/SBQQ__Subscription__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>SBQQ__Number__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__Contract__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SBQQ__ListPrice__c</columns>
    <columns>SBQQ__NetPrice__c</columns>
    <columns>SBQQ__Discount__c</columns>
    <columns>SBQQ__AdditionalDiscountAmount__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Account__c</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <label>All</label>
</ListView>