force-app/main/default/objects/SBQQ__Subscription__c/listViews/Churned_Subs_Cleanup.listView-meta.xml
<ListView>
    <fullName>Churned_Subs_Cleanup</fullName>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__ProductName__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>SBQQ__EndDate__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>SBQQ__RenewedDate__c</columns>
    <columns>Product_Sort_Order__c</columns>
    <columns>Subscription_ID_18_character__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Account__c</field>
        <operation>equals</operation>
        <value>Kompassen</value>
    </filters>
    <label>Churned Subs Cleanup</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>