force-app/main/default/objects/SBQQ__Subscription__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
    <fullName>SBQQ__All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__ContractNumber__c</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>SBQQ__TerminatedDate__c</columns>
    <columns>SBQQ__ListPrice__c</columns>
    <columns>SBQQ__NetPrice__c</columns>
    <columns>SBQQ__Discount__c</columns>
    <columns>SBQQ__AdditionalDiscountAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>SUB-0204484</value>
    </filters>
    <label>All</label>
</ListView>