force-app/main/default/objects/SBQQ__Subscription__c/listViews/Subscription_Amendment_Check.listView-meta.xml
<ListView>
    <fullName>Subscription_Amendment_Check</fullName>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__ProductName__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>SBQQ__EndDate__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__RenewedDate__c</columns>
    <columns>SBQQ__TerminatedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Account__c</field>
        <operation>contains</operation>
        <value>Distrikt Toftlund,afd. Toftlund</value>
    </filters>
    <label>Subscription Amendment Check</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>