force-app/main/default/objects/SBQQ__Subscription__c/listViews/Subscription_per_Account.listView-meta.xml
<ListView>
    <fullName>Subscription_per_Account</fullName>
    <columns>SBQQ__Account__c</columns>
    <columns>Delivery_Account__c</columns>
    <columns>SBQQ__ProductName__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>SBQQ__EndDate__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__RenewedDate__c</columns>
    <columns>SBQQ__TerminatedDate__c</columns>
    <columns>Subscription_ACV__c</columns>
    <columns>Auto_Renewal__c</columns>
    <columns>Municipality_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__ContractNumber__c</field>
        <operation>equals</operation>
        <value>00010156</value>
    </filters>
    <label>Contract Cleanup List (TEMPLATE: CLONE)</label>
    <sharedTo>
        <role>Admin</role>
        <roleAndSubordinates>Admin</roleAndSubordinates>
    </sharedTo>
</ListView>