force-app/main/default/objects/SBQQ__Subscription__c/listViews/Subscriptions_Trials.listView-meta.xml
<ListView>
    <fullName>Subscriptions_Trials</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>SBQQ__EndDate__c</columns>
    <columns>Subscription_ACV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Product__c</field>
        <operation>contains</operation>
        <value>Træner,fessor</value>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Start_Date_Today__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Subscriptions Trials</label>
</ListView>